--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="SJ Gestor - Sistema de Gestão de Cobranças" />
     <meta property="og:description" content="Sistema completo de gestão de cobranças com integração WhatsApp" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="./src/assets/sj-gestor-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@SJ-GESTOR" />
+    <meta name="twitter:image" content="./src/assets/sj-gestor-logo.png" />
   </head>
 
   <body>
