style: removing wallet for closed menu appbar view

--- a/front-end/public/404.html
+++ b/front-end/public/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SJ Gestor</title>
+    <title>SJ Gestor - Cobranças pelo Whatsapp</title>
     <script>
       // SPA fallback para DO Static Sites: preserva a rota original
       (function() {
