--- a/front-end/index.html
+++ b/front-end/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap">
-    <title>SJ Gestor - Sistema de Gestão de Cobranças</title>
+    <title>SJ Gestor - Sistema de Gestão de Cobranças pelo Whatsapp</title>
     <meta name="description" content="Sistema completo de gestão de cobranças com integração WhatsApp. Automatize suas cobranças e gerencie clientes, produtos e pagamentos PIX." />
     <meta name="author" content="SJ Gestor" />
 
